Bug 531716 - [13] Support for JEP 355 Text Block
Fix bug with empty text block

Change-Id: I37738fe93c146e40db779258a9757b8e1be36890
Signed-off-by: Jay Arthanareeswaran <jarthana@in.ibm.com>